--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -29,7 +29,7 @@
     overflow:visible;
   }
 
-  /* ===== Back separado ===== */
+  /* ===== Back separado (acima do header) ===== */
   #back-button{
     position:relative;
     margin-bottom:8px;
@@ -69,8 +69,8 @@
   /* ===== Question ===== */
   .stage{display:grid;gap:16px}
   .question-card{background:#f9fbff;border:1px solid #e5eaf5;border-radius:16px;padding:14px}
-  
-  /* agora texto ocupa largura total e imagem vem depois */
+
+  /* Texto em largura total; imagem abaixo */
   .q-top{display:flex;flex-direction:column;gap:14px}
   .q-prompt{font-size:22px;font-weight:800;line-height:1.3;word-break:break-word}
   .q-media{width:100%;aspect-ratio:16/10;background:#eef4ff;border:1px dashed #cfe0ff;border-radius:14px;padding:8px;overflow:hidden;display:block}
@@ -82,12 +82,60 @@
   .icon-btn:active{transform:translateY(1px)}
 
   .options{display:grid;gap:10px;margin-top:6px;grid-template-columns:repeat(2,minmax(0,1fr))}
-  .option{display:flex;align-items:center;gap:12px;background:#fff;border:2px solid #e9eef7;border-radius:18px;padding:12px;cursor:pointer;user-select:none;min-height:78px;box-shadow:0 4px 12px rgba(0,0,0,.03);transition:transform .06s ease,border-color .15s ease,box-shadow .15s ease}
+  .option{
+    display:flex;align-items:center;gap:12px;background:#fff;border:2px solid #e9eef7;border-radius:18px;
+    padding:12px;cursor:pointer;user-select:none;min-height:78px;
+    box-shadow:0 4px 12px rgba(0,0,0,.03);
+    transition:transform .06s ease,border-color .15s ease,box-shadow .15s ease
+  }
   .option:hover{transform:translateY(-1px);box-shadow:0 8px 18px rgba(0,0,0,.06)}
   .option:active{transform:translateY(0)}
   .option .thumb{width:60px;height:60px;border-radius:14px;background:#f3f6ff;border:1px solid #e6ecfb;overflow:hidden;display:flex;align-items:center;justify-content:center;font-size:30px;flex:0 0 60px}
   .option .thumb img{width:100%;height:100%;object-fit:contain;padding:6px;display:block}
+  .option.img-only{justify-content:center;gap:0}.option.img-only .thumb{margin:0 auto}.option.img-only .label{display:none}
   .option .label{font-size:19px;font-weight:800;letter-spacing:.2px;word-break:break-word}
+  .option .sub{font-size:13px;color:var(--muted)}
+
+  /* Quadrado roxo e estados de certo/errado (restaurados) */
+  .square-outline{width:38px;height:38px;border:6px solid var(--sq,#7c3aed);border-radius:10px;background:transparent;display:inline-block;position:relative;transition:border-color .2s ease,background .2s ease,transform .15s ease}
+  .option.ok .square-outline{border-color:#16a34a;background:#dcfce7}
+  .option.ok .square-outline::after{content:"✔";position:absolute;inset:0;display:flex;align-items:center;justify-content:center;color:#166534;font-size:20px;font-weight:900;animation:pop-in .18s ease-out}
+  .option.err .square-outline{border-color:#ef4444;background:#fee2e2}
+  @keyframes pop-in{from{transform:scale(.6);opacity:0}to{transform:scale(1);opacity:1}}
+  .option.ok{border-color:#86efac;animation:okPulse .4s ease}
+  .option.err{border-color:#fecaca;animation:shake .22s ease}
+  @keyframes okPulse{0%{box-shadow:0 0 0 0 rgba(34,197,94,.4)}100%{box-shadow:0 0 0 18px rgba(34,197,94,0)}}
+  @keyframes shake{0%{transform:translateX(0)}25%{transform:translateX(-4px)}50%{transform:translateX(4px)}75%{transform:translateX(-3px)}100%{transform:translateX(0)}}
+
+  .footer{margin-top:8px;display:flex;justify-content:space-between;align-items:center;gap:8px;flex-wrap:wrap}
+  .pill{background:#eef2ff;color:#3949ab;padding:8px 12px;border-radius:999px;font-size:12px;border:1px solid #d7defc}
+  .next-btn{border:none;background:linear-gradient(90deg,#3b82f6,#22c55e);color:#fff;font-weight:800;padding:12px 16px;border-radius:14px;cursor:pointer;box-shadow:0 10px 18px rgba(34,197,94,.25);opacity:.3;pointer-events:none;transition:opacity .2s ease,transform .06s ease}
+  .next-btn.ready{opacity:1;pointer-events:auto}
+  .next-btn:active{transform:translateY(1px)}
+
+  /* Confete (restaurado) */
+  .confetti{position:absolute;inset:0;pointer-events:none;overflow:hidden}
+  .piece{position:absolute;width:10px;height:10px;background:hsl(var(--h) 80% 60%);top:-12px;border-radius:2px;animation:drop linear forwards}
+  @keyframes drop{to{transform:translateY(120vh) rotate(540deg)}}
+
+  /* Toast + acessibilidade (restaurados) */
+  .toast{position:fixed;left:50%;bottom:24px;transform:translateX(-50%);background:#111827;color:#fff;padding:10px 14px;border-radius:12px;font-size:14px;box-shadow:var(--shadow);opacity:.96}
+  .sr-only{position:absolute;width:1px;height:1px;padding:0;margin:-1px;overflow:hidden;clip:rect(0,0,0,0);white-space:nowrap;border:0}
+
+  /* ORDER/MATCH infra (restaurado) */
+  .build-wrap{margin-top:8px;position:sticky;top:0;z-index:3;background:#f9fbff;padding-bottom:8px;box-shadow:0 6px 10px -8px rgba(0,0,0,.15)}
+  .build-tray{min-height:56px;background:#eef4ff;border:2px dashed #cfe0ff;border-radius:14px;padding:10px;display:flex;flex-wrap:wrap;gap:8px;align-items:center}
+  .word-chip{background:#fff;border:2px solid #dbe5ff;border-radius:12px;padding:8px 12px;font-weight:800;box-shadow:0 2px 6px rgba(0,0,0,.05);user-select:none}
+  .build-actions{display:flex;gap:8px;margin-top:8px}
+  .build-btn{border:none;background:#e6f0ff;color:#0f3ea8;padding:8px 12px;border-radius:10px;cursor:pointer;font-weight:700}
+  .build-btn:active{transform:translateY(1px)}
+  .match-grid{display:grid;grid-template-columns:1fr 1fr;gap:14px;margin-top:8px}
+  .match-col{display:flex;flex-direction:column;gap:12px}
+  .option.selected{outline:3px solid #60a5fa}
+  .option.matched{border-color:#86efac;opacity:.65;pointer-events:none}
+  .build-grid{display:grid;gap:12px;grid-template-columns:repeat(2,minmax(0,1fr))}
+  .option.word-only{gap:0;justify-content:center}
+  .option.word-only .label{width:100%;text-align:center;font-size:22px;font-weight:800}
 
   /* Blank responsivo */
   .blank{
@@ -99,11 +147,15 @@
     margin:0 .3em;
   }
 
-  .footer{margin-top:8px;display:flex;justify-content:space-between;align-items:center;gap:8px;flex-wrap:wrap}
-  .pill{background:#eef2ff;color:#3949ab;padding:8px 12px;border-radius:999px;font-size:12px;border:1px solid #d7defc}
-  .next-btn{border:none;background:linear-gradient(90deg,#3b82f6,#22c55e);color:#fff;font-weight:800;padding:12px 16px;border-radius:14px;cursor:pointer;box-shadow:0 10px 18px rgba(34,197,94,.25);opacity:.3;pointer-events:none;transition:opacity .2s ease,transform .06s ease}
-  .next-btn.ready{opacity:1;pointer-events:auto}
+  /* Loader (restaurado) */
+  .loading{position:fixed;inset:0;background:rgba(255,255,255,.75);display:flex;align-items:center;justify-content:center;z-index:9999;backdrop-filter:blur(2px);font-weight:700;color:#334155}
+  .spinner{width:42px;height:42px;border-radius:50%;border:4px solid #c7d2fe;border-top-color:#3b82f6;animation:spin 1s linear infinite;margin-right:10px}
+  @keyframes spin{to{transform:rotate(360deg)}}
 
+  .icon-btn[disabled]{opacity:.4;pointer-events:none}
+  .is-hidden{display:none!important}
+
+  /* ===== Mobile ===== */
   @media (max-width:720px){
     .options{grid-template-columns:1fr}
     .q-prompt{font-size:20px}
@@ -115,8 +167,11 @@
   <div class="app" id="app">
     <button id="back-button" onclick="goBack()">Back</button>
 
+    <!-- Confete precisa existir no DOM -->
+    <div class="confetti" id="confetti"></div>
+
     <div class="header">
-      <div class="avatar" id="avatar">🤖</div>
+      <div class="avatar" id="avatar" aria-hidden="true">🤖</div>
       <div class="title-wrap">
         <div class="title">Hannah Questions</div>
         <div class="subtitle" id="subtitle">Loading content…</div>
@@ -131,13 +186,15 @@
           <div>
             <div class="q-prompt" id="prompt">—</div>
             <div class="q-controls">
-              <button class="icon-btn" id="btnPlayPrompt">🔊 Listen</button>
-              <button class="icon-btn" id="btnRepeat">🎤 Repeat</button>
+              <button class="icon-btn" id="btnPlayPrompt" title="Listen to question">🔊 Listen</button>
+              <button class="icon-btn" id="btnRepeat" title="Repeat aloud (optional)">🎤 Repeat</button>
             </div>
           </div>
-          <div class="q-media" id="mediaBox"></div>
+          <div class="q-media" id="mediaBox" aria-label="Question image"></div>
         </div>
+
         <div class="options" id="options"></div>
+
         <div class="footer">
           <span class="pill" id="statusPill">Question —/—</span>
           <button class="next-btn" id="btnNext" disabled>Next</button>
@@ -145,6 +202,7 @@
       </div>
     </div>
   </div>
+
   <!-- Loader -->
   <div class="loading" id="loading" aria-live="polite" style="display:none">
     <div class="spinner" aria-hidden="true"></div>
@@ -300,6 +358,7 @@ firebase.auth().onAuthStateChanged(function(user){
   const statusPill = document.getElementById('statusPill');
   const confettiEl = document.getElementById('confetti');
   const liveEl     = document.getElementById('live');
+  const loadingEl  = document.getElementById('loading');
 
   const sCorrect = new Audio(`${BASE}/sounds/correct.mp3`);
   const sWrong   = new Audio(`${BASE}/sounds/wrong.mp3`);
@@ -790,9 +849,8 @@ firebase.auth().onAuthStateChanged(function(user){
         a.onended = safeFinish;
         a.onerror = safeFinish;
         a.onloadedmetadata = () => {
-          // watchdog: duração + 1.5s (rede lenta, buffer)
           const guard = Math.max(1500, Math.round((a.duration||0)*1000) + 1500);
-          setTimeout(safeFinish, guard + 500); // proteção extra
+          setTimeout(safeFinish, guard + 500);
         };
         a.play().catch(safeFinish);
       }catch{
@@ -805,7 +863,6 @@ firebase.auth().onAuthStateChanged(function(user){
         u.onend   = finish;
         u.onerror = finish;
         speechSynthesis.cancel(); speechSynthesis.speak(u);
-        // watchdog alto (15s) apenas se onend não disparar
         setTimeout(()=>{ if(isReading) finish(); }, 15000);
       }catch{
         setTimeout(finish, 800);
@@ -842,6 +899,7 @@ firebase.auth().onAuthStateChanged(function(user){
   }
 
   function confetti(n=16){
+    if(!confettiEl) return; // segurança
     for(let i=0;i<n;i++){
       const p=document.createElement('div'); p.className='piece';
       const left = Math.random()*100;
@@ -858,7 +916,7 @@ firebase.auth().onAuthStateChanged(function(user){
   function shuffle(arr){ for(let i=arr.length-1;i>0;i--){ const j = Math.floor(Math.random()*(i+1)); [arr[i],arr[j]]=[arr[j],arr[i]]; } return arr; }
   function normalize(v){ return String(v ?? '').trim().toLowerCase(); }
   function absPath(p){ if(!p) return p; if(p.startsWith('http')) return p; if(p.startsWith('/')) return p; return `${BASE}/${p}`.replace(/\/+/g,'/'); }
-  function showLoader(v){ const el=document.getElementById('loading'); if (el) el.style.display = v ? 'flex' : 'none'; }
+  function showLoader(v){ if (loadingEl) loadingEl.style.display = v ? 'flex' : 'none'; }
 
   window.activityCompleted = false;
   window.addEventListener('load', function(){ window.activityCompleted = false; });
