--- a/Atividades/WordSearchHorizontal/index.html
+++ b/Atividades/WordSearchHorizontal/index.html
@@ -6,8 +6,6 @@
   <title>Hannah Word Search Game</title>
   <style>
     :root{
-      --topbar-h: 56px;
-      --topbar-bg: #ffffffcc;
       --brand:#4a90e2;
     }
 
@@ -25,32 +23,17 @@
       background-repeat: repeat;
       background-size: contain;
       background-position: center;
-      /* espaço para a topbar fixa */
-      padding-top: calc(var(--topbar-h) + env(safe-area-inset-top, 0px));
     }
 
-    /* ===== Topbar fixa (botão Back fica aqui) ===== */
-    .topbar{
-      position: fixed;
-      top: 0; left: 0; right: 0;
-      height: calc(var(--topbar-h) + env(safe-area-inset-top, 0px));
-      padding-top: env(safe-area-inset-top, 0px);
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      background: var(--topbar-bg);
-      backdrop-filter: blur(6px);
-      box-shadow: 0 2px 12px rgba(0,0,0,.08);
-      z-index: 1000;
-    }
-    .topbar-inner{
+    /* ===== Cabeçalho simples: Back acima do título ===== */
+    .page-header{
       width: 100%;
       max-width: 1100px;
-      margin: 0 auto;
-      padding: 8px 12px;
+      padding: 12px;
+      box-sizing: border-box;
       display: flex;
-      align-items: center;
-      justify-content: flex-start;
+      flex-direction: column;
+      align-items: flex-start; /* Back alinhado à esquerda */
     }
 
     #back-button {
@@ -62,16 +45,20 @@
       background-color: var(--brand);
       color: white;
       transition: background-color 0.2s ease;
+      /* sem position fixed/sticky */
+      align-self: flex-start; /* garante alinhamento à esquerda */
+      margin-bottom: 6px;     /* pequeno respiro antes do título */
     }
     #back-button:hover { background-color: #357ab7; }
 
     /* ===== Título e layout principal ===== */
     h1 {
       font-size: 2.5em;
-      margin: 20px 0 10px 0;
+      margin: 10px 0 10px 0;
       color: var(--brand);
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
       text-align: center;
+      width: 100%;
     }
 
     #word-search-container {
@@ -163,7 +150,6 @@
       color: var(--brand);
     }
     #completion-modal p { font-size: 1.2rem; margin: 10px 0; }
-    #completion-modal button { composes: btn; }
     #completion-modal button{
       margin-top: 20px;
       padding: 10px 20px;
@@ -181,14 +167,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
-  <!-- Topbar fixa com o botão Back -->
-  <div class="topbar">
-    <div class="topbar-inner">
-      <button id="back-button" type="button">Back</button>
-    </div>
+  <!-- Cabeçalho simples: Back acima do título -->
+  <div class="page-header">
+    <button id="back-button" type="button">Back</button>
+    <h1>Hannah Word Search Game</h1>
   </div>
-
-  <h1>Hannah Word Search Game</h1>
 
   <div class="actions">
     <button id="reset-button" class="btn" type="button">Restart Game</button>
@@ -290,7 +273,7 @@
     checkUserRole();
   </script>
 
-  <!-- Handler do botão Back (não precisa mexer no script.js) -->
+  <!-- Handler do botão Back -->
   <script>
     (function attachBack(){
       const btn = document.getElementById('back-button');
@@ -299,7 +282,7 @@
         if (window.history.length > 1) {
           history.back();
         } else {
-          // fallback opcional: ajuste a URL padrão do seu hub/menu
+          // fallback opcional: ajuste para sua rota/hub padrão
           window.location.href = '../../../index.html';
         }
       });
