--- a/Atividades/Perguntas Starter/index - Copy (2).html
+++ b/Atividades/Perguntas Starter/index - Copy (2).html
@@ -70,7 +70,7 @@
   .stage{display:grid;gap:16px}
   .question-card{background:#f9fbff;border:1px solid #e5eaf5;border-radius:16px;padding:14px}
 
-  /* Texto em largura total; imagem abaixo (mobile-first) */
+  /* Texto em largura total; imagem abaixo */
   .q-top{display:flex;flex-direction:column;gap:14px}
   .q-prompt{font-size:22px;font-weight:800;line-height:1.3;word-break:break-word}
   .q-media{width:100%;aspect-ratio:16/10;background:#eef4ff;border:1px dashed #cfe0ff;border-radius:14px;padding:8px;overflow:hidden;display:block}
@@ -160,60 +160,6 @@
     .options{grid-template-columns:1fr}
     .q-prompt{font-size:20px}
     .badge{grid-column:1/-1;max-width:100%}
-  }
-
-  /* ====== Layout otimizado para telas grandes (desktop) ====== */
-  @media (min-width: 1024px){
-    /* A área toda preenche a altura útil, sem forçar scroll da página */
-    .app{
-      min-height: calc(100vh - 48px); /* respeita as margens externas */
-      display:flex;
-      flex-direction:column;
-    }
-    .stage{ flex:1; display:flex; }
-    .question-card{
-      height:100%;
-      display:grid;
-      grid-template-rows: auto 1fr auto; /* header da pergunta | conteúdo | footer */
-    }
-
-    /* Mídia à esquerda, texto/controles à direita */
-    .q-top{
-      display:grid;
-      grid-template-columns: minmax(280px, 42%) 1fr;
-      align-items:start;
-      gap:16px;
-    }
-
-    /* Limita a altura da mídia p/ não “empurrar” as opções */
-    .q-media{
-      aspect-ratio:auto;                  /* liberta do 16:10 em desktop */
-      height: clamp(220px, 36vh, 360px);  /* ajuste aqui se quiser ainda menor */
-      max-width: 100%;
-    }
-    .q-media img{ width:100%; height:100%; object-fit:contain; }
-
-    /* Opções rolam apenas dentro do cartão, não a página inteira */
-    .options{
-      min-height: 0;       /* essencial p/ overflow funcionar dentro do grid */
-      overflow: auto;
-      align-content: start;
-      padding-right: 4px;  /* respiro p/ scrollbar */
-    }
-
-    /* Rodapé sempre acessível */
-    .footer{
-      position: sticky;
-      bottom: 0;
-      background: #f9fbff;
-      padding-top: 8px;
-    }
-  }
-
-  /* ===== Ajuste fino p/ tablets horizontais ===== */
-  @media (min-width: 720px) and (max-width: 1023.98px){
-    .q-media{ height: clamp(200px, 32vh, 340px); }
-    .options{ max-height: none; }
   }
 </style>
 </head>
@@ -970,8 +916,7 @@ firebase.auth().onAuthStateChanged(function(user){
   function shuffle(arr){ for(let i=arr.length-1;i>0;i--){ const j = Math.floor(Math.random()*(i+1)); [arr[i],arr[j]]=[arr[j],arr[i]]; } return arr; }
   function normalize(v){ return String(v ?? '').trim().toLowerCase(); }
   function absPath(p){ if(!p) return p; if(p.startsWith('http')) return p; if(p.startsWith('/')) return p; return `${BASE}/${p}`.replace(/\/+/g,'/'); }
-  function showLoader(v){ if (loadingEl) styleDisplay(loadingEl, v ? 'flex' : 'none'); }
-  function styleDisplay(el, val){ if(el) el.style.display = val; }
+  function showLoader(v){ if (loadingEl) loadingEl.style.display = v ? 'flex' : 'none'; }
 
   window.activityCompleted = false;
   window.addEventListener('load', function(){ window.activityCompleted = false; });
