--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -215,6 +215,46 @@
     .q-media{ height: clamp(200px, 32vh, 340px); }
     .options{ max-height: none; }
   }
+/* 1) Ajuste direto do ponto doce no desktop */
+@media (min-width: 1024px){
+  /* Deixe a área ocupar a altura real do viewport, inclusive no iPad/Safari */
+  .app{ min-height: calc(100svh - 48px); }
+
+  /* ↓ Menor que antes: reduz a mídia para caber “tudo” */
+  .q-media{
+    aspect-ratio: auto;
+    height: clamp(180px, 28vh, 300px); /* era 220–36vh–360px */
+    max-width: 100%;
+  }
+
+  /* Ganho de espaço nas opções */
+  .option{ min-height: 70px; padding: 10px; }
+  .option .thumb{ width:54px; height:54px; flex-basis:54px; }
+  .option .label{ font-size:18px; }
+  .q-prompt{ font-size:20px; }         /* tira 2px do prompt */
+  .question-card{ padding:12px; }      /* tira 2px do cartão */
+  .q-controls{ margin-top:6px; }
+}
+
+/* 2) “Modo compacto” para telas grandes porém BAIXAS (ex.: muitos tablets em paisagem) */
+@media (min-width: 900px) and (max-height: 820px){
+  .q-top{
+    grid-template-columns: minmax(260px, 40%) 1fr; /* mídia um pouco mais estreita */
+    gap: 12px;
+  }
+  .q-media{
+    height: clamp(160px, 24vh, 260px); /* ainda menor se a altura do viewport for curta */
+  }
+  .options{
+    gap: 8px;
+    /* se quiser mais itens visíveis, pode usar 3 colunas:
+       grid-template-columns: repeat(3, minmax(0,1fr)); */
+  }
+  .option{ min-height: 64px; padding: 10px; }
+  .option .thumb{ width:50px; height:50px; flex-basis:50px; }
+  .option .label{ font-size:17px; }
+  .footer{ padding-top:6px; }
+}
 </style>
 </head>
 <body>
