--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -255,6 +255,36 @@
   .option .label{ font-size:17px; }
   .footer{ padding-top:6px; }
 }
+/* DEBUG/Força-bruta — cole por último no <style> */
+@media (min-width: 900px){
+  /* Deixe tudo obviamente menor para ver se aplica */
+  .q-media{
+    aspect-ratio: auto !important;
+    height: 200px !important;
+    max-width: 100% !important;
+    outline: 2px dashed #8b5cf6 !important; /* marca visual p/ confirmar */
+  }
+  .q-top{
+    display: grid !important;
+    grid-template-columns: 36% 1fr !important;
+    gap: 12px !important;
+  }
+  .options{
+    grid-template-columns: repeat(3, minmax(0,1fr)) !important;
+    gap: 8px !important;
+    overflow: auto !important;
+    min-height: 0 !important;
+  }
+  .stage, .question-card{ min-height: 0 !important; }
+  .q-prompt{ font-size: 18px !important; }
+  .option{ min-height: 64px !important; padding: 10px !important; }
+  .option .thumb{ width: 50px !important; height: 50px !important; flex-basis: 50px !important; }
+}
+
+/* Fallback extra para tablets em paisagem com pouca altura */
+@media (orientation: landscape) and (max-height: 820px){
+  .q-media{ height: 170px !important; }
+}
 </style>
 </head>
 <body>
