--- a/Atividades/Perguntas Starter/index.html
+++ b/Atividades/Perguntas Starter/index.html
@@ -70,7 +70,7 @@
   .stage{display:grid;gap:16px}
   .question-card{background:#f9fbff;border:1px solid #e5eaf5;border-radius:16px;padding:14px}
 
-  /* Texto em largura total; imagem abaixo (mobile-first) */
+  /* Texto em largura total; imagem abaixo */
   .q-top{display:flex;flex-direction:column;gap:14px}
   .q-prompt{font-size:22px;font-weight:800;line-height:1.3;word-break:break-word}
   .q-media{width:100%;aspect-ratio:16/10;background:#eef4ff;border:1px dashed #cfe0ff;border-radius:14px;padding:8px;overflow:hidden;display:block}
@@ -162,129 +162,48 @@
     .badge{grid-column:1/-1;max-width:100%}
   }
 
-  /* ====== Layout otimizado para telas grandes (desktop) ====== */
-  @media (min-width: 1024px){
-    /* A área toda preenche a altura útil, sem forçar scroll da página */
+  /* ====== Sem-scroll em telas grandes (tablet horizontal, desktop, projetor) ====== */
+  @media (min-width: 1024px) and (min-height: 720px){
     .app{
-      min-height: calc(100vh - 48px); /* respeita as margens externas */
+      max-width:1180px;
+      min-height: calc(100svh - 48px);
       display:flex;
       flex-direction:column;
     }
-    .stage{ flex:1; display:flex; }
+    .stage{ flex:1; display:flex; min-height:0; }
     .question-card{
-      height:100%;
       display:grid;
-      grid-template-rows: auto 1fr auto; /* header da pergunta | conteúdo | footer */
+      grid-template-rows: auto 1fr auto; /* header | conteúdo | footer */
+      min-height:0;
     }
-
-    /* Mídia à esquerda, texto/controles à direita */
     .q-top{
       display:grid;
-      grid-template-columns: minmax(280px, 42%) 1fr;
+      grid-template-columns: minmax(260px, 40%) 1fr;
       align-items:start;
       gap:16px;
     }
-
-    /* Limita a altura da mídia p/ não “empurrar” as opções */
     .q-media{
-      aspect-ratio:auto;                  /* liberta do 16:10 em desktop */
-      height: clamp(220px, 36vh, 360px);  /* ajuste aqui se quiser ainda menor */
-      max-width: 100%;
+      aspect-ratio:auto;
+      height: clamp(160px, 24vh, 260px); /* chave para imagem menor */
+      max-width:100%;
     }
     .q-media img{ width:100%; height:100%; object-fit:contain; }
-
-    /* Opções rolam apenas dentro do cartão, não a página inteira */
     .options{
-      min-height: 0;       /* essencial p/ overflow funcionar dentro do grid */
-      overflow: auto;
-      align-content: start;
-      padding-right: 4px;  /* respiro p/ scrollbar */
+      grid-template-columns: repeat(3, minmax(0,1fr));
+      min-height:0;
+      align-content:start;
     }
-
-    /* Rodapé sempre acessível */
+    .option{ min-height:68px; padding:10px; }
+    .option .thumb{ width:54px; height:54px; flex-basis:54px; }
+    .option .label{ font-size:18px; }
+    .q-prompt{ font-size:20px; }
     .footer{
       position: sticky;
       bottom: 0;
-      background: #f9fbff;
-      padding-top: 8px;
+      background:#f9fbff;
+      padding-top:8px;
     }
   }
-
-  /* ===== Ajuste fino p/ tablets horizontais ===== */
-  @media (min-width: 720px) and (max-width: 1023.98px){
-    .q-media{ height: clamp(200px, 32vh, 340px); }
-    .options{ max-height: none; }
-  }
-/* 1) Ajuste direto do ponto doce no desktop */
-@media (min-width: 1024px){
-  /* Deixe a área ocupar a altura real do viewport, inclusive no iPad/Safari */
-  .app{ min-height: calc(100svh - 48px); }
-
-  /* ↓ Menor que antes: reduz a mídia para caber “tudo” */
-  .q-media{
-    aspect-ratio: auto;
-    height: clamp(180px, 28vh, 300px); /* era 220–36vh–360px */
-    max-width: 100%;
-  }
-
-  /* Ganho de espaço nas opções */
-  .option{ min-height: 70px; padding: 10px; }
-  .option .thumb{ width:54px; height:54px; flex-basis:54px; }
-  .option .label{ font-size:18px; }
-  .q-prompt{ font-size:20px; }         /* tira 2px do prompt */
-  .question-card{ padding:12px; }      /* tira 2px do cartão */
-  .q-controls{ margin-top:6px; }
-}
-
-/* 2) “Modo compacto” para telas grandes porém BAIXAS (ex.: muitos tablets em paisagem) */
-@media (min-width: 900px) and (max-height: 820px){
-  .q-top{
-    grid-template-columns: minmax(260px, 40%) 1fr; /* mídia um pouco mais estreita */
-    gap: 12px;
-  }
-  .q-media{
-    height: clamp(160px, 24vh, 260px); /* ainda menor se a altura do viewport for curta */
-  }
-  .options{
-    gap: 8px;
-    /* se quiser mais itens visíveis, pode usar 3 colunas:
-       grid-template-columns: repeat(3, minmax(0,1fr)); */
-  }
-  .option{ min-height: 64px; padding: 10px; }
-  .option .thumb{ width:50px; height:50px; flex-basis:50px; }
-  .option .label{ font-size:17px; }
-  .footer{ padding-top:6px; }
-}
-/* DEBUG/Força-bruta — cole por último no <style> */
-@media (min-width: 900px){
-  /* Deixe tudo obviamente menor para ver se aplica */
-  .q-media{
-    aspect-ratio: auto !important;
-    height: 200px !important;
-    max-width: 100% !important;
-    outline: 2px dashed #8b5cf6 !important; /* marca visual p/ confirmar */
-  }
-  .q-top{
-    display: grid !important;
-    grid-template-columns: 36% 1fr !important;
-    gap: 12px !important;
-  }
-  .options{
-    grid-template-columns: repeat(3, minmax(0,1fr)) !important;
-    gap: 8px !important;
-    overflow: auto !important;
-    min-height: 0 !important;
-  }
-  .stage, .question-card{ min-height: 0 !important; }
-  .q-prompt{ font-size: 18px !important; }
-  .option{ min-height: 64px !important; padding: 10px !important; }
-  .option .thumb{ width: 50px !important; height: 50px !important; flex-basis: 50px !important; }
-}
-
-/* Fallback extra para tablets em paisagem com pouca altura */
-@media (orientation: landscape) and (max-height: 820px){
-  .q-media{ height: 170px !important; }
-}
 </style>
 </head>
 <body>
@@ -598,6 +517,40 @@ firebase.auth().onAuthStateChanged(function(user){
   function speakFriendly(pool){ const pick = pool[(Math.random()*pool.length)|0]; speak(pick); }
 
   /* =========================
+     Ajuste fino para telas grandes (evitar rolagem)
+  ========================= */
+  function fitDesktopNoScroll(){
+    const isWide = window.innerWidth >= 1024 && window.innerHeight >= 720;
+    const app    = document.getElementById('app');
+    const card   = document.querySelector('.question-card');
+    const media  = document.getElementById('mediaBox');
+    const header = document.querySelector('.header');
+    const footer = document.querySelector('.footer');
+    const options= document.getElementById('options');
+
+    if(!(isWide && app && card && media && header && footer && options)){
+      document.body.style.overflow = '';
+      if(media) media.style.height = '';
+      return;
+    }
+
+    document.body.style.overflow = 'hidden';
+
+    const appTop = app.getBoundingClientRect().top;
+    const cardH  = card.offsetHeight;
+    const overflowPx = (appTop + cardH) - window.innerHeight + 8;
+
+    if (overflowPx > 0){
+      const current = media.getBoundingClientRect().height || 0;
+      const newH = Math.max(140, current - overflowPx);
+      media.style.height = newH + 'px';
+    } else {
+      media.style.height = '';
+    }
+  }
+  window.addEventListener('resize', fitDesktopNoScroll);
+
+  /* =========================
      Render current question
   ========================= */
   function renderQuestion(){
@@ -628,9 +581,11 @@ firebase.auth().onAuthStateChanged(function(user){
     mediaBox.innerHTML = '';
     if(q.image){
       const img = new Image(); img.alt = 'Question image';
+      img.onload = fitDesktopNoScroll;            // ajuste quando a imagem carregar
       img.src = absPath(q.image); mediaBox.appendChild(img);
     } else {
       const img = new Image(); img.src = './hannah_pensando.png'; img.alt = 'Hannah thinking';
+      img.onload = fitDesktopNoScroll;            // ajuste também
       mediaBox.appendChild(img);
     }
 
@@ -652,6 +607,9 @@ firebase.auth().onAuthStateChanged(function(user){
       if (idx >= questions.length) { finish(); return; }
       renderQuestion();
     };
+
+    // Ajuste assíncrono após montar a questão
+    setTimeout(fitDesktopNoScroll, 0);
   }
 
   /* =========================
@@ -758,7 +716,7 @@ firebase.auth().onAuthStateChanged(function(user){
         try{
           mediaBox.innerHTML = '';
           const gif = new Image(); gif.src = './hannah_feliz.gif'; gif.alt = 'Hannah celebrating';
-          gif.setAttribute('draggable','false'); gif.style.pointerEvents = 'none';
+       	  gif.setAttribute('draggable','false'); gif.style.pointerEvents = 'none';
           mediaBox.appendChild(gif);
         }catch(e){}
         confetti(18);
@@ -1040,11 +998,13 @@ firebase.auth().onAuthStateChanged(function(user){
   function shuffle(arr){ for(let i=arr.length-1;i>0;i--){ const j = Math.floor(Math.random()*(i+1)); [arr[i],arr[j]]=[arr[j],arr[i]]; } return arr; }
   function normalize(v){ return String(v ?? '').trim().toLowerCase(); }
   function absPath(p){ if(!p) return p; if(p.startsWith('http')) return p; if(p.startsWith('/')) return p; return `${BASE}/${p}`.replace(/\/+/g,'/'); }
-  function showLoader(v){ if (loadingEl) styleDisplay(loadingEl, v ? 'flex' : 'none'); }
-  function styleDisplay(el, val){ if(el) el.style.display = val; }
+  function showLoader(v){ if (loadingEl) loadingEl.style.display = v ? 'flex' : 'none'; }
 
   window.activityCompleted = false;
-  window.addEventListener('load', function(){ window.activityCompleted = false; });
+  window.addEventListener('load', function(){
+    window.activityCompleted = false;
+    fitDesktopNoScroll(); // garante ajuste ao abrir
+  });
 
   /* Back button (confirmations) */
   window.goBack = async function goBack(){
