--- a/Atividades/Perguntas Starter9/index.html
+++ b/Atividades/Perguntas Starter9/index.html
@@ -21,7 +21,7 @@
   /* ===== App container ===== */
   .app{
     width:100%;
-    max-width:1140px;                 /* ↑ aproveita melhor a largura em telas grandes */
+    max-width:1140px;
     margin: 12px auto 24px auto;
     background:var(--card);
     border-radius:var(--radius);
@@ -33,10 +33,10 @@
 
   /* ===== Back separado (acima do header) ===== */
   #back-button{
-    display:inline-flex;              /* não vira barra inteira */
+    display:inline-flex;
     align-items:center;
     gap:.5rem;
-    width:auto !important;            /* força largura só do conteúdo */
+    width:auto !important;
     max-width:none;
     margin-bottom:8px;
     border:none; background:#eef2ff; color:#0f3ea8;
@@ -76,10 +76,9 @@
   .stage{display:grid;gap:16px}
   .question-card{
     background:#f9fbff;border:1px solid #e5eaf5;border-radius:16px;padding:14px;
-    margin: 0 auto;                   /* garante centralização visual */
+    margin: 0 auto;
   }
 
-  /* Texto em largura total; imagem abaixo (mobile-first) */
   .q-top{display:flex;flex-direction:column;gap:14px}
   .q-prompt{font-size:22px;font-weight:800;line-height:1.3;word-break:break-word}
   .q-media{width:100%;aspect-ratio:16/10;background:#eef4ff;border:1px dashed #cfe0ff;border-radius:14px;padding:8px;overflow:hidden;display:block}
@@ -114,7 +113,7 @@
   .option.ok{border-color:#86efac;animation:okPulse .4s ease}
   .option.err{border-color:#fecaca;animation:shake .22s ease}
   @keyframes okPulse{0%{box-shadow:0 0 0 0 rgba(34,197,94,.4)}100%{box-shadow:0 0 0 18px rgba(34,197,94,0)}}
-  @keyframes shake{0%{transform:translateX(0)}25%{transform:translateX(-4px)}50%{transform:translateX(4px)}75%{transform:translateX(-3px)}100%{transform:translateX(0)}}
+  @keyframes shake{0%{transform:translateX(0)}25%{transform:translateX(-4px)}50%{transform:translateX(4px)}75%{transform:translateX(-3px)}100%{transform:translateX(0)}
 
   .footer{margin-top:12px;display:flex;justify-content:space-between;align-items:center;gap:8px;flex-wrap:wrap}
   .pill{background:#eef2ff;color:#3949ab;padding:8px 12px;border-radius:999px;font-size:12px;border:1px solid #d7defc}
@@ -173,41 +172,30 @@
 
   /* ===== Desktop otimizado ===== */
   @media (min-width: 1024px){
-    /* Cabe dentro do card sem “campo vazio” */
     .question-card{ padding:12px; }
-
-    /* Layout lado a lado no topo */
     .q-top{
       display:grid;
       grid-template-columns: minmax(300px, 40%) 1fr;
       align-items:start;
       gap:16px;
     }
-
-    /* Mídia menor no desktop/tablet */
     .q-media{
       aspect-ratio:auto;
-      height: clamp(160px, 24vh, 260px);  /* ↓ imagem compacta para caber opções */
+      height: clamp(160px, 24vh, 260px);
       max-width:100%;
     }
-
-    /* 3 colunas para ocupar a largura e eliminar “buracos” */
     .options{
-      grid-template-columns: repeat(3, minmax(0, 1fr));
+      grid-template-columns: repeat(3, minmax(0,1fr));
       gap:12px;
       margin-top:10px;
     }
-
-    /* Cartões mais compactos em telas grandes */
     .option{ min-height:68px; padding:10px 12px; }
     .option .thumb{ width:54px; height:54px; flex-basis:54px; }
     .option .label{ font-size:18px; }
-
-    /* Texto levemente menor para equilibrar o conjunto */
     .q-prompt{ font-size:20px; }
   }
 
-  /* ===== Tablets paisagem baixos (evita scroll) ===== */
+  /* ===== Tablets paisagem baixos ===== */
   @media (min-width: 900px) and (max-height: 820px){
     .q-top{ grid-template-columns: minmax(280px, 38%) 1fr; gap:12px; }
     .q-media{ height: clamp(150px, 22vh, 240px); }
@@ -303,7 +291,8 @@ firebase.auth().onAuthStateChanged(function(user){
     const level = url.searchParams.get('level');
     const unit  = url.searchParams.get('unit');
     const fase  = url.searchParams.get('fase');
-    return { level, unit, fase };
+    const name  = url.searchParams.get('name');
+    return { level, unit, fase, name };
   }
   function normalizeDir(prefix, value, fallbackNum){
     if (!value) return prefix + fallbackNum;
@@ -311,6 +300,71 @@ firebase.auth().onAuthStateChanged(function(user){
     if (lower.startsWith(prefix.toLowerCase())) return value.trim();
     const onlyNum = (value.match(/\d+/)||[''])[0];
     return prefix + (onlyNum || fallbackNum);
+  }
+
+  /* -------- Name resolution (ATUALIZADO) -------- */
+  function titleCaseName(s){
+    return String(s||'').trim().split(/\s+/).map(w => w.charAt(0).toUpperCase()+w.slice(1)).join(' ');
+  }
+  function getLocalName(){
+    try{
+      const ls = localStorage.getItem('hannah_user_name');
+      if (ls && ls.trim()) return ls.trim();
+    }catch(e){}
+    return null;
+  }
+  async function tryDbPaths(uid, paths){
+    for (const p of paths){
+      try{
+        const path = p.replace('{uid}', uid);
+        const snap = await firebase.database().ref(path).once('value');
+        const v = snap.val();
+
+        if (typeof v === 'string' && v.trim()) return v.trim();
+
+        if (v && typeof v === 'object'){
+          if (v.nome)         return String(v.nome).trim();
+          if (v.name)         return String(v.name).trim();
+          if (v.displayName)  return String(v.displayName).trim();
+        }
+      }catch(e){}
+    }
+    return null;
+  }
+  async function resolveUserName(){
+    const { name } = getParams();
+
+    // 1) URL ?name=
+    if (name && name.trim()) return titleCaseName(name);
+
+    // 2) Firebase Auth displayName
+    const u = firebase.auth().currentUser;
+    if (u && u.displayName && u.displayName.trim()) return titleCaseName(u.displayName);
+
+    // 3) LocalStorage
+    const local = getLocalName();
+    if (local) return titleCaseName(local);
+
+    // 4) RTDB — primeiro os caminhos do seu caso
+    if (currentUserId){
+      const foundDirect = await tryDbPaths(currentUserId, [
+        'usuarios/{uid}/nome',  // ← seu exemplo (string direta)
+        'usuarios/{uid}',       // ← raiz: tenta nome/name/displayName
+      ]);
+      if (foundDirect) return titleCaseName(foundDirect);
+
+      // 5) alternativos/legados
+      const foundAlt = await tryDbPaths(currentUserId, [
+        'usuarios/{uid}/profile/name',
+        'usuarios/{uid}/perfil/nome',
+        'usuarios/{uid}/dados/nome',
+        'usuarios/{uid}/name'
+      ]);
+      if (foundAlt) return titleCaseName(foundAlt);
+    }
+
+    // 6) Fallback
+    return 'Friend';
   }
 
   /* WebAudio SFX */
@@ -422,28 +476,67 @@ firebase.auth().onAuthStateChanged(function(user){
   [sCorrect,sWrong,sTap,sNext].forEach(a=>{a.preload='auto'});
 
   /* =========================
-     Load questions
+     Load + Personalize questions (NOVO)
   ========================= */
   showLoader(true);
-  fetch(QFILE, {cache:'no-store'})
-    .then(r => { if(!r.ok) throw new Error(`Could not load ${QFILE} (HTTP ${r.status})`); return r.text(); })
-    .then(text => {
-      const data = JSON.parse(text);
+
+  // Substitui todas ocorrências de 'usuario_nome' em strings
+  function subNameInString(str, userName){
+    if (!str || typeof str !== 'string') return str;
+    return str.replace(/usuario_nome/gi, userName);
+  }
+  function deepReplaceValue(val, userName){
+    if (typeof val === 'string') return subNameInString(val, userName);
+    if (Array.isArray(val)) return val.map(v => deepReplaceValue(v, userName));
+    if (val && typeof val === 'object'){
+      const clone = Array.isArray(val) ? [] : {};
+      for (const k in val){
+        clone[k] = deepReplaceValue(val[k], userName);
+      }
+      return clone;
+    }
+    return val;
+  }
+  function personalizeQuestions(data, userName){
+    const out = { ...data, questions: [] };
+    for (const q of (data.questions||[])){
+      const qq = deepReplaceValue(q, userName);
+      out.questions.push(qq);
+    }
+    if (out.title) out.title = subNameInString(out.title, userName);
+    if (out.subtitle) out.subtitle = subNameInString(out.subtitle, userName);
+    return out;
+  }
+
+  (async function loadAndRender(){
+    try{
+      const r = await fetch(QFILE, {cache:'no-store'});
+      if(!r.ok) throw new Error(`Could not load ${QFILE} (HTTP ${r.status})`);
+      const text = await r.text();
+      let data = JSON.parse(text);
       if(!data || !Array.isArray(data.questions)) throw new Error('Invalid format in questions.txt');
+
+      // Resolve nome do usuário e personaliza
+      const userName = titleCaseName(await resolveUserName());
+      window.__HANNAH_USER_NAME__ = userName;
+
+      data = personalizeQuestions(data, userName);
+
       questions = data.questions;
       subtitle.textContent = data.title || 'Practice answering quickly and carefully!';
       idx = 0;
       renderQuestion();
-    })
-    .catch(err=>{
+    }catch(err){
       console.error('[Q&A] Load failed:', err);
       toast('Error loading questions. Check level, unit and questions.txt.');
       subtitle.textContent = 'Failed to load content';
       promptEl.textContent = `Path not found.\nBASE: ${BASE}\nFile: ${QFILE}`;
       mediaBox.innerHTML = '';
       optionsEl.innerHTML = '';
-    })
-    .finally(()=> showLoader(false));
+    }finally{
+      showLoader(false);
+    }
+  })();
 
   /* =========================
      Prompt/blank utils + TTS builder
