--- a/Atividades/Perguntas Starter9/index.html
+++ b/Atividades/Perguntas Starter9/index.html
@@ -113,7 +113,7 @@
   .option.ok{border-color:#86efac;animation:okPulse .4s ease}
   .option.err{border-color:#fecaca;animation:shake .22s ease}
   @keyframes okPulse{0%{box-shadow:0 0 0 0 rgba(34,197,94,.4)}100%{box-shadow:0 0 0 18px rgba(34,197,94,0)}}
-  @keyframes shake{0%{transform:translateX(0)}25%{transform:translateX(-4px)}50%{transform:translateX(4px)}75%{transform:translateX(-3px)}100%{transform:translateX(0)}
+  @keyframes shake{0%{transform:translateX(0)}25%{transform:translateX(-4px)}50%{transform:translateX(4px)}75%{transform:translateX(-3px)}100%{transform:translateX(0)}}
 
   .footer{margin-top:12px;display:flex;justify-content:space-between;align-items:center;gap:8px;flex-wrap:wrap}
   .pill{background:#eef2ff;color:#3949ab;padding:8px 12px;border-radius:999px;font-size:12px;border:1px solid #d7defc}
