--- a/Atividades/Perguntas Starter9/index.html
+++ b/Atividades/Perguntas Starter9/index.html
@@ -113,7 +113,13 @@
   .option.ok{border-color:#86efac;animation:okPulse .4s ease}
   .option.err{border-color:#fecaca;animation:shake .22s ease}
   @keyframes okPulse{0%{box-shadow:0 0 0 0 rgba(34,197,94,.4)}100%{box-shadow:0 0 0 18px rgba(34,197,94,0)}}
-  @keyframes shake{0%{transform:translateX(0)}25%{transform:translateX(-4px)}50%{transform:translateX(4px)}75%{transform:translateX(-3px)}100%{transform:translateX(0)}}
+  @keyframes shake{
+    0%{transform:translateX(0)}
+    25%{transform:translateX(-4px)}
+    50%{transform:translateX(4px)}
+    75%{transform:translateX(-3px)}
+    100%{transform:translateX(0)}
+  } /* ← faltava esta chave no envio anterior */
 
   .footer{margin-top:12px;display:flex;justify-content:space-between;align-items:center;gap:8px;flex-wrap:wrap}
   .pill{background:#eef2ff;color:#3949ab;padding:8px 12px;border-radius:999px;font-size:12px;border:1px solid #d7defc}
@@ -302,7 +308,7 @@ firebase.auth().onAuthStateChanged(function(user){
     return prefix + (onlyNum || fallbackNum);
   }
 
-  /* -------- Name resolution (ATUALIZADO) -------- */
+  /* -------- Name resolution -------- */
   function titleCaseName(s){
     return String(s||'').trim().split(/\s+/).map(w => w.charAt(0).toUpperCase()+w.slice(1)).join(' ');
   }
@@ -345,11 +351,11 @@ firebase.auth().onAuthStateChanged(function(user){
     const local = getLocalName();
     if (local) return titleCaseName(local);
 
-    // 4) RTDB — primeiro os caminhos do seu caso
+    // 4) RTDB — primeiro caminhos do seu caso
     if (currentUserId){
       const foundDirect = await tryDbPaths(currentUserId, [
-        'usuarios/{uid}/nome',  // ← seu exemplo (string direta)
-        'usuarios/{uid}',       // ← raiz: tenta nome/name/displayName
+        'usuarios/{uid}/nome',  // string direta (seu print)
+        'usuarios/{uid}',       // raiz: tenta nome/name/displayName
       ]);
       if (foundDirect) return titleCaseName(foundDirect);
 
@@ -476,11 +482,10 @@ firebase.auth().onAuthStateChanged(function(user){
   [sCorrect,sWrong,sTap,sNext].forEach(a=>{a.preload='auto'});
 
   /* =========================
-     Load + Personalize questions (NOVO)
+     Load + Personalize questions
   ========================= */
   showLoader(true);
 
-  // Substitui todas ocorrências de 'usuario_nome' em strings
   function subNameInString(str, userName){
     if (!str || typeof str !== 'string') return str;
     return str.replace(/usuario_nome/gi, userName);
@@ -516,7 +521,6 @@ firebase.auth().onAuthStateChanged(function(user){
       let data = JSON.parse(text);
       if(!data || !Array.isArray(data.questions)) throw new Error('Invalid format in questions.txt');
 
-      // Resolve nome do usuário e personaliza
       const userName = titleCaseName(await resolveUserName());
       window.__HANNAH_USER_NAME__ = userName;
 
