--- a/Atividades/TestStarter/index.html
+++ b/Atividades/TestStarter/index.html
@@ -421,7 +421,7 @@ firebase.auth().onAuthStateChanged(function(user){
   const { level, unit, fase } = getParams();
   const levelDir = normalizeDir('Level', level || '0', '0');
   const unitDir  = normalizeDir('Unit',  unit  || '1', '1');
-  const BASE  = `../../${levelDir}/${unitDir}/QA`;
+  const BASE  = `../../${levelDir}/${unitDir}/DataTest`;
   const QFILE = `${BASE}/questions.txt`;
 
   const pill = document.getElementById('pill');
