--- a/Level0/Unit1/teacher/index.html
+++ b/Level0/Unit1/teacher/index.html
@@ -474,7 +474,11 @@
             const imageFiles = [
                 'imagem1.png',
                 'imagem2.png',
-                'imagem3.png'
+                'imagem3.png',
+                'imagem4.png',
+                'imagem5.png',
+                'imagem6.png',
+                'imagem7.png'
             ];
 
             let html = `<h3>Documents</h3>`;
